--- a/weather.html
+++ b/weather.html
@@ -10,10 +10,7 @@
 
 <body>
 
-<a class="weatherwidget-io" href="https://forecast7.com/en/39d74n75d54/wilmington/?unit=us" data-label_1="WILMINGTON" data-label_2="WEATHER" data-theme="original" >WILMINGTON WEATHER</a>
-<script>
-!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
-</script>
+<div id="idb6b5b99d9c2d0" a='{"t":"g","v":"1.2","lang":"en","locs":[1685,1143,1737,1694,1845,1778,1920],"ssot":"f","sics":"ms","cbkg":"#1976D2","cfnt":"#FFFFFF","ceb":"#1976D2","cef":"#FFFFFF"}'><a href="https://sharpweather.com/widgets/">Weather widget html for website by sharpweather.com</a></div><script async src="https://static1.sharpweather.com/widgetjs/?id=idb6b5b99d9c2d0"></script>
 
 
 </body>
