--- a/weather.html
+++ b/weather.html
@@ -10,8 +10,7 @@
 
 <body>
 
-<div id="idb6b5b99d9c2d0" a='{"t":"g","v":"1.2","lang":"en","locs":[1685,1143,1737,1694,1845,1778,1920],"ssot":"f","sics":"ms","cbkg":"#1976D2","cfnt":"#FFFFFF","ceb":"#1976D2","cef":"#FFFFFF"}'><a href="https://sharpweather.com/widgets/">Weather widget html for website by sharpweather.com</a></div><script async src="https://static1.sharpweather.com/widgetjs/?id=idb6b5b99d9c2d0"></script>
-
+<div id="idb6b5b99d9c2d0" a='{"t":"g","v":"1.2","lang":"en","locs":[1685,1143,1737,1694,1845,1778,1920],"ssot":"f","sics":"ms","cbkg":"#1976D2","cfnt":"#FFFFFF","ceb":"#1976D2","cef":"#FFFFFF","slmw":400,"slbr":5,"slfs":19}'><a href="https://sharpweather.com/widgets/">Weather widget html for website by sharpweather.com</a></div><script async src="https://static1.sharpweather.com/widgetjs/?id=idb6b5b99d9c2d0"></script>
 
 </body>
 
