--- a/wilmington.html
+++ b/wilmington.html
@@ -1,4 +1,20 @@
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
 
+<head>
+  <meta charset="utf-8">
+  <title>Weather</title>
+<link rel="stylesheet" href="css/styles.css">
 
+</head>
+
+<body>
 
 <div id="id85bc75b745ea5" a='{"t":"g7","v":"1.2","lang":"en","locs":[1920],"ssot":"f","sics":"ms","cbkg":"#1976D2","cfnt":"#FFFFFF","stof":"7","slmw":400}'>Weather Data Source: <a href="https://sharpweather.com/weather_wilmington-6553/30_days/">weather 30 days forecast Wilmington</a></div><script async src="https://static1.sharpweather.com/widgetjs/?id=id85bc75b745ea5"></script>
+
+</body>
+
+</html>
+
+
+
